# kztg

./: .gitignore  build.sh  esbuild.config.cjs  esbuild.config.js  generate_metadata.py  hugo.toml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.dist.config.cjs  worker.js  wrangler.jsonc  wrangler.toml
.github/workflows/: deploy.yml  download-ytdlp.yml  generate-metadata.yml
content/sermons/20220626/: index.md
content/sermons/20220703/: index.md
content/sermons/20220710/: index.md
content/sermons/20220717/: index.md
content/sermons/20220724/: index.md
content/sermons/20220731/: index.md
content/sermons/20220807/: index.md
content/sermons/20220814/: index.md
content/sermons/20220821/: index.md
content/sermons/20220828/: index.md
content/sermons/20220904/: index.md
content/sermons/20220911/: index.md
content/sermons/20220918/: index.md
content/sermons/20220925/: index.md
content/sermons/20221002/: index.md
content/sermons/20221009/: index.md
content/sermons/20221016/: index.md
content/sermons/20221023/: index.md
content/sermons/20221030/: index.md
content/sermons/20221106/: index.md
content/sermons/20221113/: index.md
css/: style.css
js/: audio-player.js  contact-form.js  cookies.js  i18n.js  index.js  metadata.js  sermons.js
layouts/: index.html
layouts/partials/: hero.html
scripts/: build_manifest_and_upload.py  fetch_sermon.fish  generate_metadata.js  generate_metadata.py  pipeline.py
static/: index.js  manifest.webmanifest  service-worker.js
static/css/: style.css
(+166 files in other folders)
